# pratt-parser

./: Makefile  README  calculator.cpp  forward.h  grammar.h  parser.cpp  parser.h  parser_core.h  symbol.h  token.h
examples/: calculator.cpp
parser/: forward.h  grammar.h  grammar_impl.h  parser_core.h  parser_core_impl.h  parser_impl.h  symbol.h  symbol_impl.h  token.h  token_impl.h
pascal/: CMakeLists.txt  README  TODO  ast_visitors.h  expression.h  expression_fwd.h  node_tags.h  node_traits.h  operator.h  pascal_ast.cpp  pascal_grammar.cpp  pascal_grammar.h  pascal_parser  pretty_printer.cpp  pretty_printer.h  syntax_error.h  templ_insts.cpp  test.cpp  visitor.h
pascal/include/: ast_visitors.h  debug.h  node.h  node_fwd.h  node_traits.h  operator.h  pascal_grammar.h  pascal_handlers.h  pascal_literals.h  pretty_printer.h  syntax_error.h  utils.h  visitor.h
pascal/pretty_printer_gen/: pp_gen.cpp
pascal/src/: node.cpp  node_tags.cpp  node_traits.cpp  operator.cpp  pascal_grammar.cpp  pascal_literals.cpp  pretty_printer.cpp  pretty_printer.npp  templ_insts.cpp  test.cpp
pascal/src/handlers/: expressions.cpp  literals.cpp  operators.cpp  proc_func_definitions.cpp  sections.cpp  statements.cpp  types.cpp
